<resources>
    <string name="applicationLabel">KИСУ КНД ТБ Рейды</string>

    <string name="navigation_drawer_open">Открыть меню навигации</string>
    <string name="navigation_drawer_close">Закрыть меню навигации</string>
    <string name="navigation_raids">Осмотры ТС</string>
    <string name="navigation_outgoing">Исходящие</string>
    <string name="navigation_drafts">Черновики</string>
    <string name="navigation_trash">Корзина</string>
    <string name="navigation_config">Настройки</string>

    <string name="menu_save">Сохранить</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_move_to_trash">Удалить</string>
    <string name="menu_send">Отправить</string>
    <string name="menu_restore">Восстановить</string>
    <string name="menu_cancel">Отменить отправку</string>
    <string name="menu_delete">Очистить корзину</string>
    <string name="menu_send_all_drafts">Отправить все черновики на сервер</string>
    <string name="menu_move_to_trash_all_drafts">Удалить все черновики</string>
    <string name="menu_restore_all">Восстановить все</string>
    <string name="menu_cancel_all">Отменить отправку всех черновиков</string>

    <string name="authorization_greeting">Вас приветствует система КИСУ КНД ТБ Рейды М</string>
    <string name="login_hint">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="authorization_enter">Войти</string>
    <string name="hotline_support">Горячая линия технической поддержки:</string>
    <string name="support_email_link">kisu2@geopallada.ru</string>

    <string name="authorization_registration">Придумайте пароль для регистрации в системе.</string>
    <string name="authorization_registrated">Пользователь зарегистрирован. Войдите в систему</string>
    <string name="authorization_fail">Не удалось выполнить вход, проверьте правильность введенных данных</string>
    <string name="authorization_error">Ошибка входа в систему, попробуйте еще раз позже или обратитесь в службу технической поддержки.</string>
    <string name="authorization_connect_error">Не удалось подключиться к серверу</string>
    <string name="invalid_username">Неверное имя пользователя</string>
    <string name="invalid_password">Пароль не должен быть пустым</string>
    <string name="logout_error">Ошибка выхода из аккаунта\nПроверьте подключение к сети Ространснадзора</string>

    <string name="new_raid">Создать рейдовый осмотр ТС</string>
    <string name="search_raid">Поиск рейдовых осмотров ТС</string>
    <string name="raid_information">Информация об осмотре ТС</string>
    <string name="vehicle_information">Информация О ТС</string>
    <string name="new_raid_bar">Создать осмотр ТС</string>
    <string name="edit_raid_bar">Изменить осмотр ТС</string>

    <string name="department">Отдел: </string>
    <string name="transport_type">Вид транспорта*</string>
    <string name="raid_address">Место проведения (адрес)*</string>
    <string name="act_number">Номер акта*</string>
    <string name="inspector">Уполномоченное(ые) лицо(а), проводившее(ие) рейдовый осмотр*</string>
    <string name="inspector_short">Уполномоченное(ые) лицо(а)*</string>
    <string name="order_number">Номер распоряжения*</string>
    <string name="order_date">Дата распоряжения*</string>
    <string name="task_number">Номер задания</string>
    <string name="task_date">Дата задания</string>
    <string name="start_date">Начало рейдового осмотра*</string>
    <string name="end_date">Окончание рейдового осмотра*</string>
    <string name="vehicle_owner">Собственник/Перевозчик*</string>
    <string name="owner_ogrn">ОГРН собственника</string>
    <string name="owner_inn">ИНН собственника</string>
    <string name="warning_count">Количество предостережений</string>
    <string name="warning_date">Дата предостережений</string>
    <string name="violation_existing">Выявленные нарушения</string>
    <string name="attacment">Вложения</string>

    <string name="dialog_empty_title">Очистить корзину?</string>
    <string name="dialog_empty_message">Осмотры ТС будут удалены навсегда</string>
    <string name="cancel">Отмена</string>
    <string name="empty">Очистить</string>
    <string name="trash">В корзину</string>
    <string name="dialog_move_title">Удалить черновик?</string>
    <string name="dialog_move_all_title">Удалить все черновики?</string>
    <string name="dialog_move_message">Черновик будет перемещен в корзину</string>
    <string name="dialog_move_all_message">Черновики будут перемещены в корзину</string>

    <string name="create_administrative_case">Создание административного дела</string>
    <string name="administrative_case_number">№ административного дела</string>
    <string name="clause">Статья КоАП*</string>
    <string name="protocol">Протокол</string>
    <string name="protocol_number">№ протокола</string>
    <string name="protocol_place">Место протокола</string>
    <string name="date">Дата</string>
    <string name="decree">Постановление</string>
    <string name="decree_number">№ постановления</string>
    <string name="decree_place">Место постановления</string>
    <string name="definition">Определение</string>
    <string name="definition_number">№ определения</string>
    <string name="definition_place">Место определения</string>
    <string name="act_date">Дата акта</string>

    <string name="violation_exist">Есть нарушения</string>
    <string name="violation_not_exist">Нарушений нет</string>
    <string name="empty_list">Здесь пока ничего нет</string>
    <string name="navigation_logout">Выход</string>

    <string-array name="transport_type">
        <item>Автомобильный</item>
        <item>Воздушный</item>
        <item>Железнодорожный</item>
        <item>Морской</item>
        <item>Внутренний водный</item>
    </string-array>

    <string-array name="department">
        <item>ОНОТБ УГАН НОТБ ЦФО</item>
        <item>ОНОТБ УГАН НОТБ СЗФО</item>
        <item>ОНОТБ УГАН НОТБ ЮФО</item>
        <item>ОНОТБ УГАН НОТБ УФО</item>
        <item>ОНОТБ УГАН НОТБ ПФО</item>
        <item>ОНОТБ УГАН НОТБ СФО</item>
        <item>ОНОТБ УГАН НОТБ ДФО</item>
        <item>МТУ НОТБ СКФО</item>
        <item>ОНОАБ И ПАСОП УГАН НОТБ ЦФО</item>
        <item>ОНОАБ И ПАСОП УГАН НОТБ СЗФО</item>
        <item>ОНОАБ И ПАСОП УГАН НОТБ ЮФО</item>
        <item>ОНОАБ И ПАСОП УГАН НОТБ УФО</item>
        <item>ОНОАБ И ПАСОП УГАН НОТБ ПФО</item>
        <item>ОНОАБ И ПАСОП УГАН НОТБ СФО</item>
        <item>ОНОАБ И ПАСОП УГАН НОТБ ДФО</item>
        <item>ОНОТБ УТБ</item>
        <item>ОНОАБ УТБ</item>
    </string-array>
</resources>
