<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/transport_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:entries="@array/transport_type"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textMultiLine"
            android:hint="@string/raid_address"/>

        <EditText
            android:id="@+id/act_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/act_number"/>

        <EditText
            android:id="@+id/inspector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:hint="@string/inspector_short"/>

        <EditText
            android:id="@+id/disposition_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/disposition_number"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/disposition_date"
            style="@style/SpinnerButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disposition_date"/>

        <EditText
            android:id="@+id/task_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/task_number"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/task_date"
            style="@style/SpinnerButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_date"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_date"
            style="@style/SpinnerButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/end_date"
            style="@style/SpinnerButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date"/>

        <EditText
            android:id="@+id/vehicle_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textMultiLine"
            android:hint="@string/vehicle_information"/>

        <EditText
            android:id="@+id/vehicle_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textMultiLine"
            android:hint="@string/vehicle_owner"/>

        <EditText
            android:id="@+id/owner_ogrn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="15"
            android:hint="@string/owner_ogrn"/>

        <EditText
            android:id="@+id/owner_inn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="12"
            android:hint="@string/owner_inn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/warning_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerButtonStyle"
            android:hint="@string/warning_count"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/warning_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SpinnerButtonStyle"
            android:hint="@string/warning_date"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/violation_existing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violation_existing"
            android:textColor="@color/material_on_surface_emphasis_medium"
            android:layout_margin="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:layout_gravity="center_horizontal"
            style="@style/AppTheme.Button"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>