<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vehicle_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_owner"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/transport_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transport_type"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/vehicle_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_information"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/act_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_number"/>

</LinearLayout>