<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_date"
                style="@style/SpinnerButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/start_date"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_time"
                style="@style/SpinnerButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="Время"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/end_date"
                style="@style/SpinnerButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/end_date"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/end_time"
                style="@style/SpinnerButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="Время"/>

        </RelativeLayout>

        <Spinner
            android:id="@+id/transport_type"
            style="@style/SpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/transport_type"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/address"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/raid_address"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/act_number"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/act_number"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/act_date"
                style="@style/SpinnerButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="Дата"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/order_number"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/order_number"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_date"
                style="@style/SpinnerButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="Дата"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/task_number"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/task_number"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/task_date"
                style="@style/SpinnerButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="Дата"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/warning_count"
                style="@style/EditTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:hint="@string/warning_count"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/warning_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                style="@style/SpinnerButtonStyle"
                android:hint="Дата"/>

        </RelativeLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/violation_existing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violation_existing"
            android:layout_margin="8dp" />

        <EditText
            android:id="@+id/department"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:hint="@string/department"/>

        <EditText
            android:id="@+id/inspector"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:hint="@string/inspector_short"/>

        <EditText
            android:id="@+id/vehicle_info"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/vehicle_information"/>

        <EditText
            android:id="@+id/vehicle_owner"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/vehicle_owner"/>

        <EditText
            android:id="@+id/owner_inn"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="12"
            android:hint="@string/owner_inn" />

        <EditText
            android:id="@+id/owner_ogrn"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="15"
            android:hint="@string/owner_ogrn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editor_menu_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/menu_save"
            android:background="@color/primary_color"
            android:textColor="@color/action_bar_button_text_color"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>